<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>

    <string name="fragment_accounts_name">Accounts</string>
    <string name="fragment_transactions_name">Transactions</string>
    
    <string name="from">From:</string>
    <string name="refill">Refill</string>
    <string name="to">To:</string>
    <string name="account_name">Account name</string>
    <string name="current_amount">Current Amount</string>
    <string name="target_amount">Target amount</string>
    <string name="amount">Amount</string>
    <string name="expense">Expense</string>
    <string name="credit">Credit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="income">Income</string>
    <string name="day_of_month">Day of month</string>
    <string name="slash"> / </string>
    <string name="colon">: S</string>
    <string name="new_account">New account</string>
    <string name="update_budget">Define budget</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="credit_expense">Credit/Expense</string>
    <string name="transfer">Transfer money</string>
    <string name="help">Help</string>
    <string name="modify">Edit</string>
    <string name="delete">Delete</string>
    <string name="account_help">
        This tab allows you to manage your accounts.\nPress Menu -> New account to add a new account.\nLong press an account to edit it.
    </string>
    <string name="got_it">I got it!</string>
    <string name="about_text">Application developed by:\nJonathan Cornaz and Ludovic Lehmann\nAll rights reserved</string>
    <string name="select_date">Select a date</string>
    <string name="no_account_selected">Please select an account or create a new one!</string>
    <string name="no_amount_typed">Please type an amount!</string>
    <string name="select_currency">Select your currency:</string>
    <string name="transaction_help">This tab allows you to manage your transactions</string>
    <string name="no_account">To begin please create new accounts in menu -> new account</string>
    <string name="date">Date:</string>
    <string name="same_account">Unable to transfer from/to the same account</string>
    <string name="no_account_to">Please select an account to transfer to</string>
    <string name="no_account_from">Please select the account from witch to transfer from</string>
    <string name="off_account">Off-account</string>
</resources>
