<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:id="@+id/group1">
        <item android:id="@+id/menu_account_new_account" android:title="@string/new_account"></item>
        <item android:id="@+id/menu_account_new_budget" android:title="@string/update_budget"></item>
    </group>
    <group android:id="@+id/group2">
        <item android:id="@+id/menu_account_credit_expense" android:title="@string/credit_expense"></item>
        <item android:id="@+id/menu_account_transfer" android:title="@string/transfer"></item>
    </group>
    <group android:id="@+id/group3">
        <item android:id="@+id/menu_account_settings" android:title="@string/settings"></item>
        <item android:id="@+id/menu_account_help" android:title="@string/help"></item>
        <item android:id="@+id/menu_account_about" android:title="@string/about"></item>
        
    </group>
    

</menu>
