<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >

 		 <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:columnCount="2"
            android:columnOrderPreserved="true"
            android:useDefaultMargins="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/income" />
            
            <EditText
                android:id="@+id/dialog_budget_edittext_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:ems="8"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_gravity="center_vertical"
                android:text="@string/day_of_month" />

            <NumberPicker
                android:id="@+id/dialog_budget_numberpicker_day_of_month"
                android:layout_column="1"
                android:layout_gravity="center_horizontal|top"
                android:layout_row="1" />

         </GridLayout>
         
          <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="?android:attr/buttonBarStyle" >
	
	        <Button
	            style="?android:attr/buttonBarButtonStyle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:onClick="onClickCancel"
	            android:text="@string/cancel" />
	
	        <Button
	            style="?android:attr/buttonBarButtonStyle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:onClick="onClickOk"
	            android:text="@string/ok" />

	    </LinearLayout>

     </LinearLayout>
        
  </ScrollView>
