<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:columnCount="2"
            android:columnOrderPreserved="true"
            android:useDefaultMargins="true" >

            <TextView
                android:id="@+id/dialog_account_textview_account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/account_name" />
            
            <EditText
                android:id="@+id/dialog_account_edittext_account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:ems="8" />

            <TextView
                android:id="@+id/dialog_account_textview_target_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/target_amount" />

            <EditText
                android:id="@+id/dialog_account_edittext_target_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:ems="8"
                android:inputType="numberDecimal" />

        </GridLayout>
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="?android:attr/buttonBarStyle" >
	
	        <Button
	            style="?android:attr/buttonBarButtonStyle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:onClick="onClickCancel"
	            android:text="@string/cancel" />
	
	        <Button
	            style="?android:attr/buttonBarButtonStyle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:onClick="onClickOk"
	            android:text="@string/ok" />

	    </LinearLayout>

    </LinearLayout>
    
</ScrollView>
