<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_margin="10dp" >

 		 <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/dialog_credit_expense_edittext_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="6"
                android:hint="@string/amount"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/dialog_credit_expense_button_date"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickDate" />

        </LinearLayout>

 		 <LinearLayout
 		     android:layout_width="match_parent"
 		     android:layout_height="wrap_content"
 		     android:layout_marginTop="10dp" >
            
 		     <LinearLayout
 		         android:layout_width="0dp"
 		         android:layout_height="wrap_content"
 		         android:layout_weight="1"
 		         android:orientation="vertical" >

                <TextView
                    android:id="@+id/dialog_credit_expense_textview_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from" />

                <Spinner
                    android:id="@+id/dialog_credit_expense_spinner_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/dialog_credit_expense_textview_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

 		     <Switch
 		         android:id="@+id/dialog_credit_expense_switch_expense_credit"
 		         android:layout_width="0dp"
 		         android:layout_height="wrap_content"
 		         android:layout_gravity="center_vertical"
 		         android:layout_weight="1"
 		         android:checked="false"
 		         android:textOff="Expense"
 		         android:textOn="Credit" />
            
 		 </LinearLayout>
 		 <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="?android:attr/buttonBarStyle" >
	
	        <Button
	            style="?android:attr/buttonBarButtonStyle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:onClick="onClickCancel"
	            android:text="@string/cancel" />
	
	        <Button
	            style="?android:attr/buttonBarButtonStyle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:onClick="onClickOk"
	            android:text="@string/ok" />

	    </LinearLayout>

     </LinearLayout>
        
  </ScrollView>